# AthenaRL

./: .gitignore  .gitlab-ci.yml  .gitmodules  entry.py  pyproject.toml  requirements.txt  reranking.code-workspace  setup.cfg  test.ipynb  test_runner.py  tox.ini
athena/: __init__.py  version.py
athena/core/: aggregators.py  config.py  dataclasses.py  debug.py  dtypes.py  enum_meta.py  logger.py  monitors.py  parameters.py  params.py  registry.py  tensorboard.py  tracker.py
athena/data/: __init__.py  athena_datamodule.py  base.py  custom.py  data_extractor.py  manual_datamodule.py  petastorm_datamodule.py
athena/episode/: __init__.py  circular_replay_buffer.py  prioritized_replay_buffer.py  sequence.py  sum_tree.py
athena/evaluation/: __init__.py
athena/metrics/: base.py  hit.py  mrr.py  ndcg.py  roster.py
athena/model_managers/: manager.py  roster.py  seq2slate_base.py
athena/models/: __init__.py  base.py  seq2slate.py
athena/net_builder/: roster.py  slate_ranking_builder.py  slate_reranking_builder.py
athena/nn/: __init__.py  functional.py
athena/optim/: __init__.py  optimizer.py  optimizer_roster.py  scheduler.py  scheduler_roster.py  soft_update.py  uninferrable_optimizers.py  uninferrable_schedulers.py  utils.py
athena/preprocessing/: __init__.py  batch_preprocessor.py  identify_types.py  normalization.py  preprocessor.py  transforms.py
athena/publisher/: __init__.py  lfs_publisher.py  (+3 more)
docs/: nohup.out  requirements.txt
nastenka_solnishko/: __init__.py
preprocessing/: dependency-reduced-pom.xml  pom.xml
source/: __init__.py  version.py
(+219 files in other folders)
