[metadata]
name = athena
version = 0.1
url = https://github.com/facebookresearch/ReAgent
author = Facebook
description = Diginetica RL
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License

[options]
packages = find:
python_requires = >=3.8
install_requires =
  click>=7.0
  # Remove upper bound, once these issues are fixed
  # 1. https://github.com/pytorch/pytorch/issues/91516
  # 2. https://github.com/pytorch/pytorch/issues/91329
  numpy>=1.17.2,<1.24.0
  pandas>=1.0.3
  pydantic>=1.4
  tinydb>=4.1.1
  tqdm>=4.46.0
  petastorm>=0.9.0
  parameterized>=0.7.4
  ruamel.yaml>=0.15.99
  scipy>=1.3.1
  tensorboard>=1.14
  scikit-learn>=0.20.0
  # Check if the latest works
  pyspark==3.1.1
  # Check if the latest works (run tests)
  pytorch-lightning

[options.extras_require]
test =
  coverage>=5.1
  pytest-xdist>=1.30.0
  pytest>=5.3
  # Check if the latest works
  spark-testing-base==0.10.0
  pytest-cov

torchrec_gpu = torchrec

# July 2022: torchrec-cpu stable (0.1.1) caused test errors
torchrec_cpu = torchrec-nightly-cpu

[tool:pytest]
addopts = --verbose
python_files = tests/*.py tests/**/*.py
markers = serial